--- a/E-commerce_site.yml
+++ b/E-commerce_site.yml
@@ -11,7 +11,7 @@
         
   - name: Host code
     git: 
-    repo: https://github.com/Anu-Opp/ansible-work-1.git
+    repo: https://github.com/Anu-Opp/ecomm-3.git
     dest: /var/wwww/html
 
 ...
