--- a/hosts.ini
+++ b/hosts.ini
@@ -1,8 +1,8 @@
 [g1]
 
-n1 ansible_host=172.31.93.157 ansible_user=ec2-user ansible_private_key_file=~/one.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n1 ansible_host=172.31.90.102 ansible_user=ubuntu ansible_private_key_file=~/one.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
-n2 ansible_host=172.31.90.171 ansible_user=ec2-user ansible_private_key_file=~/one.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n2 ansible_host=172.31.93.191 ansible_user=ec2-user ansible_private_key_file=~/one.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 n3 ansible_host=172.31.84.9 ansible_user=ec2-user ansible_private_key_file=~/one.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
