--- a/Ubuntu.yml
+++ b/Ubuntu.yml
@@ -4,19 +4,19 @@
   become: yes
 
   tasks:
-  - name: Install Apache2
+  - name: Install apache2
     apt:
-        name: Apache2
+        name: apache2
         state: present
         
-  - name: Start Apache2
+  - name: Start apache2
     service:
-     name: Apache2
+     name: apache2
      state: started
 
-  - name: Enable Apache2
+  - name: Enable apache2
     service:
-     name: Apache2
+     name: apache2
      enabled: yes
 
 ...
