--- a/multiple-platform.yml
+++ b/multiple-platform.yml
@@ -8,37 +8,37 @@
       yum:
         name: httpd
         state: present
-      when: ansible_distribution == 'Amazon'
+      when: ansible_distribution == 'Amazon' or ansible_distribution == 'Centos'
 
     - name: Start httpd service
       service:
         name: httpd
         state: started
-      when: ansible_distribution == 'Amazon'
+      when: ansible_distribution == 'Amazon' or ansible_distribution == 'Centos'
 
     - name: Enable httpd
       service:
         name: httpd
         enabled: yes
-      when: ansible_distribution == 'Amazon'
+      when: ansible_distribution == 'Amazon' or ansible_distribution == 'Centos'
 
     - name: Install apache2 (Ubuntu)
       apt:
         name: apache2
         state: present
         update_cache: yes
-      when: ansible_distribution == 'Ubuntu'
+      when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
 
     - name: Start apache2 service
       service:
         name: apache2
         state: started
-      when: ansible_distribution == 'Ubuntu'
+      when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
 
     - name: Enable apache2
       service:
         name: apache2
         enabled: yes
-      when: ansible_distribution == 'Ubuntu'
+      when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
 ...
 
