--- a/angular/tasks/main.yml
+++ b/angular/tasks/main.yml
@@ -1,6 +1,5 @@
 #SPDX-License-Identifier: MIT-0
 ---
-# tasks file for apache
+# tasks file for angular
 - import_tasks: install.yml
 - import_tasks: config.yml
- 
